--- a/02-multi-play.yml
+++ b/02-multi-play.yml
@@ -1,10 +1,46 @@
+# ansible n1 -m file -a "path/home/ec2-user/ all_dir state=directory"
 ---
-- name: update all severs
-  hosts: all 
+- name: update n1 servers
+  hosts: n1
   become: yes
   tasks:
-    - name: create info.txt with content on all servers
-      copy:
-        dest: /home/ec2-user/opt/devops/info.txt
-        content: "hello from ansible!" 
+    - name: Create Directory
+      file:
+        path: /home/ec2-user/new_dir
+        state: directory
+
+    - name: Create Directory
+      file:
+        path: /home/ec2-user/new_dir_1
+        state: directory
+
+- name: update n2 servers
+  hosts: n2
+  become: yes
+  tasks:
+    - name: Creat Directory
+      file:
+        path: /home/ec2-user/new_dir_1
+        state: directory
+
+  
+    - name: Creat Directory
+      file:
+        path: /home/ec2-user/new_dir_2
+        state: directory
+   
+- name: update group1 servers
+  hosts: g1
+  become: yes
+  
+  tasks:
+    - name: Creat Directory
+      file:
+        path: /home/ec2-user/new_dir_group1
+        state: directory
+
+    - name: Creat Directory
+      file:
+        path: /home/ec2-user/new_dir_group2
+        state: directory
 ...
