--- a/homework-play.yml
+++ b/homework-play.yml
@@ -1,10 +1,11 @@
+# ansible n1 -m file -a "path/home/ec2-user/ all_dir state=directory"
 ---
-- name: update all severs
-  hosts: all 
+- name: update n1 severs
+  hosts: n1
   become: yes
   tasks:
-    - name: create info.txt with content on all servers
-      copy:
-        dest: /home/ec2-user/opt/devops/info.txt
-        content: "hello from ansible!" 
+    - name: create director
+      file:
+        path: /home/ec2-user/new-dir
+        state: directory 
 ...
