--- a/05-food.yml
+++ b/05-food.yml
@@ -11,7 +11,7 @@
 
     - name: Host code
       git:
-        repo: https://github.com/Tracyerite/ecomm-3.git
+        repo: https://github.com/Tracyerite/food3.git
         dest:/var/www/html
 
 ...
