--- a/hosts.ini
+++ b/hosts.ini
@@ -4,3 +4,5 @@ n2 ansible_host=172.31.9.211 ansible_user=ec2-user ansible_ssh_private_key_file=
 n3 ansible_host=172.31.15.52 ansible_user=ec2-user ansible_ssh_private_key_file=/home/centos/saturday.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 n4 ansible_host=172.31.10.214 ansible_user=ec2-user ansible_ssh_private_key_file=/home/centos/saturday.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
+n5 ansible_host=172.31.20.136 ansible_user=ubuntu ansible_ssh_private_key_file=/home/centos/saturday.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n6 ansible_host=172.31.11.227 ansible_user=ec2-user ansible_ssh_private_key_file=/home/centos/saturday.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
