--- a/07-ubuntu.yml
+++ b/07-ubuntu.yml
@@ -1,6 +1,6 @@
 # ansible n1 -m file -a "path/home/ec2-user/ all_dir state=directory"
 ---
-- name: Install APACHE
+- name: Install HTTP server
   hosts: n5
   become: yes
   tasks:
