--- a/apache/tasks/config.yml
+++ b/apache/tasks/config.yml
@@ -1,11 +1,11 @@
 ---
  - name: updating page
    copy:
-     src: unchanged.html
+     src: changed.html
      dest: /var/www/html/fixed.html
 
  - name: updating page
    template:
-    src: steady.html
-    dest: /var/www/html/steady.html
+    src: ready.html
+    dest: /var/www/html/ready.html
 ... 
