--- a/ready.yml
+++ b/ready.yml
@@ -3,12 +3,12 @@
   hosts: g3
   become: yes
   vars:
-    myusername: Preye
+    myusername: tracy
 
   tasks:
    - name: updating page
      template:
-       src: steady.html
-       dest: /var/www/html/steady3.html
+       src: ready.j2
+       dest: /var/www/html/ready.html
 ...
 
