--- a/homework-play.yml
+++ b/homework-play.yml
@@ -4,7 +4,7 @@
   hosts: n1
   become: yes
   tasks:
-    - name: create director
+    - name: create directory
       file:
         path: /home/ec2-user/new-dir
         state: directory 
