--- a/httpd ubuntu.yml
+++ b/httpd ubuntu.yml
@@ -1,6 +1,6 @@
 # ansible n1 -m file -a "path/home/ec2-user/ all_dir state=directory"
 ---
-- name: Install HTTP server
+- name: Install APACHE server
   hosts: n5
   become: yes
   tasks:
